--- a/video.html
+++ b/video.html
@@ -133,7 +133,7 @@ table, th, td {
 <body style="background-color: #339CFF; ">
 
 <div class="topnav">
-  <a class="active" href="home.html">Home</a>
+  <a class="active" href="index.html">Home</a>
   <a href="games.html">Games</a>
   <a href="video.html">Videochat</a>
   <a href="chat.html">chat</a>
